I think im done?

--- a/index.html
+++ b/index.html
@@ -540,7 +540,32 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<h2>Anton Do</h2>
 
 					<p>I am a recent graduate of App Academy's immersive software development course, where I honed my skills in
-						JavaScript, Python, SQL, React, Redux, Express, and Flask</p>
+						JavaScript, Python, SQL, React, Redux, Express, Flask, and more</p>
+					<p>Skills:</p>
+					<img align="left" alt="Visual Studio Code" width="26px"
+						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/visual-studio-code/visual-studio-code.png" />
+					<img align="left" alt="HTML5" width="26px"
+						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png" />
+					<img align="left" alt="CSS3" width="26px"
+						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/css/css.png" />
+					<img align="left" alt="JavaScript" width="26px"
+						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png" />
+					<img align="left" alt="React" width="26px"
+						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png" />
+					<img align="left" alt="Node.js" width="26px"
+						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/nodejs/nodejs.png" />
+					<img align="left" alt="python" width="26px"
+						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/python/python.png" />
+					<img align="left" alt="flask" width="26px"
+						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/flask/flask.png" />
+					<img align="left" alt="SQL" width="26px"
+						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/sql/sql.png" />
+					<img align="left" alt="postgreSQL" width="26px"
+						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/postgresql/postgresql.png" />
+					<img align="left" alt="Terminal" width="26px"
+						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/terminal/terminal.png" />
+					<br>
+					<br>
 					<p>Contacts:</p>
 					<p><a href="mailto:dohanton@gmail.com">Email</a></p>
 					<p><a href="https://www.linkedin.com/in/anton-do/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
@@ -653,16 +678,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section> -->
 
 			<!-- About -->
-			<section class="blurb">
+			<!-- <section class="blurb">
 				<h2>About</h2>
 				<p> I am a recent graduate of App Academy's immersive software development course, where I honed my skills in
 					JavaScript, Python, SQL, React, Redux, Express, and Flask. Prior to this, I earned a Bachelor's degree in
-					Linguistics and a Minor in Business from San Jose State University.
-				</p>
-				<!-- <ul class="actions">
+					Linguistics and a Minor in Business from San Jose State University. -->
+			<!-- </p> -->
+			<!-- <ul class="actions">
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul> -->
-			</section>
+			<!-- </section> -->
 
 			<!-- Footer -->
 			<section id="footer">
