--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<li><a href="https://lets-hang.onrender.com" target="_blank" rel="noopener noreferrer">Lets Hang!</a></li>
 					<li><a href="https://aa-flask-project.onrender.com" target="_blank" rel="noopener noreferrer">Petsy</a></li>
 					<!-- <li><a href="https://anton-auth-me.onrender.com" target="_blank" rel="noopener noreferrer">CareBnb</a></li> -->
-					<li><a href="My Resume.pdf" target="_blank" rel="noopener noreferrer">My Resume</a></li>
+					<li><a href="Anton_Do_Resume.pdf" target="_blank" rel="noopener noreferrer">My Resume</a></li>
 				</ul>
 			</nav>
 			<nav class="main">
