Updated portfolio a bit

--- a/index.html
+++ b/index.html
@@ -508,33 +508,42 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 					<p>I am a recent graduate of App Academy's immersive software development course, where I honed my skills in
 						JavaScript, Python, SQL, React, Redux, Express, Flask, and more</p>
+					<p>
+
+						<a href="Anton_Do_Resume.pdf" target="_blank" rel="noopener noreferrer">My Resume
+
+						</a>
+					</p>
 					<p>Skills:</p>
-					<img align="left" alt="Visual Studio Code" width="26px"
-						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/visual-studio-code/visual-studio-code.png" />
-					<img align="left" alt="HTML5" width="26px"
-						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png" />
-					<img align="left" alt="CSS3" width="26px"
-						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/css/css.png" />
-					<img align="left" alt="JavaScript" width="26px"
-						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png" />
-					<img align="left" alt="React" width="26px"
-						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png" />
-					<img align="left" alt="Node.js" width="26px"
-						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/nodejs/nodejs.png" />
-					<img align="left" alt="python" width="26px"
-						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/python/python.png" />
-					<img align="left" alt="flask" width="26px"
-						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/flask/flask.png" />
-					<img align="left" alt="SQL" width="26px"
-						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/sql/sql.png" />
-					<img align="left" alt="postgreSQL" width="26px"
-						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/postgresql/postgresql.png" />
-					<img align="left" alt="Terminal" width="26px"
-						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/terminal/terminal.png" />
-					<br>
+					<div>
+
+						<img align="center" alt="Visual Studio Code" width="26px"
+							src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/visual-studio-code/visual-studio-code.png" />
+						<img align="center" alt="HTML5" width="26px"
+							src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png" />
+						<img align="center" alt="CSS3" width="26px"
+							src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/css/css.png" />
+						<img align="center" alt="JavaScript" width="26px"
+							src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png" />
+						<img align="center" alt="React" width="26px"
+							src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png" />
+						<img align="center" alt="Node.js" width="26px"
+							src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/nodejs/nodejs.png" />
+						<img align="center" alt="python" width="26px"
+							src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/python/python.png" />
+						<img align="center" alt="flask" width="26px"
+							src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/flask/flask.png" />
+						<img align="center" alt="SQL" width="26px"
+							src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/sql/sql.png" />
+						<img align="center" alt="postgreSQL" width="26px"
+							src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/postgresql/postgresql.png" />
+						<img align="center" alt="Terminal" width="26px"
+							src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/terminal/terminal.png" />
+					</div>
+
 					<br>
 					<p>Contacts:</p>
-					<p><a href="mailto:dohanton@gmail.com">Email</a></p>
+					<p><a href="mailto:antonhdo@gmail.com">Email</a></p>
 					<p><a href="https://www.linkedin.com/in/anton-do/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
 					<p><a href="https://github.com/AntonHDo" target="_blank" rel="noopener noreferrer">Github</a></p>
 				</header>
